--- a/css/scss/modal/_photo.scss
+++ b/css/scss/modal/_photo.scss
@@ -5,7 +5,7 @@
   }
 
   &.modal-active {
-    z-index: 2014;
+    //z-index: 2014;
   }
 
   .clickable-photo {
